monitoring/controllers/base/observability/loki/ingress.yaml
# loki/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: observability
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`loki.example.com`)
      priority: 10
      middlewares:
        - name: redirect-to-https
      services:
        - kind: Service
          name: loki-gateway
          namespace: observability
          passHostHeader: true
          port: 3100
          responseForwarding:
            flushInterval: 1ms
  tls:
    secretName: loki-tls
